# ddibr

./: .gitignore  .gitmodules  MANIFEST.in  NOTICE  README.md  index.html  pyproject.toml  requirements.txt
pages/static/css/: bulma-carousel.min.css
pages/static/videos/: ddibr_rendering_tools.webm
scripts/data/shiny/: resize.py
scripts/diff-dibr/: coarse-to-fine.sh  freeview.py
src/pyDiffDIBR/: Blending.py  BwdRendering.py  Camera.py  Dataset.py  FwdRendering.py  Image.py  LearningRate.py  Loss.py  MeshBuffer.py  Model.py  Monitoring.py  Optimizer.py  RenderingApp.py  RenderingDevice.py  Trainer.py  Window.py  __init__.py  _constants.py  _utils.py
src/pyDiffDIBR/shaders/: Blending.slang  CopyTexture.slang  DiffBuffer.slang  DiffTex.slang  LearningKernels.slang  Loss.slang  Mean.slang  Projection.slang  Quality.slang  ShaderStageOut.slang  SpaceTransformer.slang  Uniforms.slang  WorldTransformation.slang  _Constants.slang  _Utils.slang  synthesis.slang
src/pyDiffDIBR/toml_files/: default.toml  default_360.toml  default_front_facing.toml  front_facing_2.toml  front_facing_3.toml  front_facing_4.toml
static/videos/: ddibr_drendering_tools.webm
